# piku

./: .editorconfig  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  setup.py
piku/: config.py  main.py
piku/commands/: __init__.py  add.py  create.py  deploy.py  info.py  install.py  new.py  remove.py  serial.py  upgrade.py  version.py
piku/core/: backup.py  config.py  device.py  errors.py  index.py  locker.py  modules.py  packages.py  sync.py  utils.py
piku/core/utils/: __init__.py  cache.py  sync.py  utils.py  watcher.py
piku/template/: .gitignore  README.md  piku.toml  pyproject.toml
tests/: conftest.py  fixtures.py  test_piku.py
tests/commands/: test_add.py  test_create.py  test_info.py  test_remove.py  test_serial.py  test_version.py
tests/core/: test_packages.py
tests/utils/: test_sync.py  test_utils.py
